Fix overflow of `main` element on smaller viewports

--- a/src/blobdash/static/main.css
+++ b/src/blobdash/static/main.css
@@ -266,8 +266,10 @@ main {
     }
     
     align-content: start;
-    margin: 1.5rem;
+    padding: 1.5rem;
     gap: 1.5rem;
+
+    overflow: scroll;
 
     a {
         text-decoration: none;
